# top-visao-computacional-t1

./: README.md  blank  blank.cpp  detection  detection.cpp
testes/: CMakeCache.txt  CMakeLists.txt  DisplayImage  Makefile  a.out  blank.cpp  cmake_install.cmake  processa.cpp
