cmake_minimum_required(VERSION 2.8)
project( DisplayImage )
find_package( OpenCV REQUIRED )
add_executable( DisplayImage DisplayImage.cpp )
target_link_libraries( DisplayImage ${OpenCV_LIBS} )

project( blank )
find_package( OpenCV REQUIRED )
add_executable( blank blank.cpp )
target_link_libraries( blank ${OpenCV_LIBS} )
